--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -739,12 +739,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce35af47-c58f-4e3c-ba69-9809e85bd655",
+   "cell_type": "markdown",
+   "id": "0ad290b0-8af1-4223-8e97-fe6585140726",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Test"
+   ]
   }
  ],
  "metadata": {
