improved ocp & srp

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "70bb3a44-266d-49f9-ac53-422bc1c3c1db",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "70b2ebe1-e8ea-45d4-a23c-cf2723af9510",
    "metadata": {},
    "outputs": [],
@@ -70,6 +70,8 @@
     "class UserService {\n",
     "    saveUser(user: User): void {\n",
     "        // Save user to the database\n",
+    "\n",
+    "        this.sendEmail(user, \"User created\");\n",
     "    }\n",
     "\n",
     "    sendEmail(user: User, message: string): void {\n",
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "89d1b5f2-d597-4039-ac92-91c6e1dc382b",
    "metadata": {},
    "outputs": [],
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "2d6d7fa6-eb85-412e-a598-f9bcbed0f03c",
    "metadata": {},
    "outputs": [],
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "a3ff3900-3090-4714-86a6-7aaca7e900d6",
    "metadata": {},
    "outputs": [],
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "9b94e290-3f94-430a-9f40-d070e41ec5a6",
    "metadata": {},
    "outputs": [
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "6b4bf8ea-0079-4e6e-8b3a-c498ff6330d6",
    "metadata": {},
    "outputs": [],
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "accee7a5-fdcf-46f6-896b-e6fbe89737ed",
    "metadata": {},
    "outputs": [
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "d0ee1403-2205-445f-9e84-44d074b89d62",
    "metadata": {},
    "outputs": [],
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "181fd4ca-62b5-499c-90c3-9866afc45a06",
    "metadata": {},
    "outputs": [
@@ -331,6 +333,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "830d50dd-7390-42ef-a698-f2116a0857a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface Circle {\n",
+    "    radius: number;\n",
+    "}\n",
+    "\n",
+    "class AreaCalculator {\n",
+    "    calculateRectangle(rectangle: Rectangle): void {\n",
+    "        console.log(rectangle.width * rectangle.height);\n",
+    "    }\n",
+    "\n",
+    "    calculateSquare(square: Square): void {\n",
+    "        console.log(square.sideLength * square.sideLength);\n",
+    "    }\n",
+    "\n",
+    "    calculateCircle(circle: Circle): void {\n",
+    "        console.log(circle.radius * circle.radius * 3.14);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bc54a54c-01a5-423f-86b8-3c7feb57a60e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "4\n",
+      "12.56\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Initialize\n",
+    "const areaCalculator = new AreaCalculator();\n",
+    "\n",
+    "// Run\n",
+    "const rectangle: Rectangle = {\n",
+    "    width: 2,\n",
+    "    height: 8\n",
+    "}\n",
+    "const square: Square = {\n",
+    "    sideLength: 2\n",
+    "}\n",
+    "\n",
+    "const circle: Circle = {\n",
+    "    radius: 2\n",
+    "}\n",
+    "\n",
+    "areaCalculator.calculateRectangle(rectangle);\n",
+    "areaCalculator.calculateSquare(square);\n",
+    "areaCalculator.calculateCircle(circle);"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "16018187-267a-4514-b1e6-fee3a50cff4c",
    "metadata": {},
@@ -340,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "57db81a2-9013-4c10-8f67-960f65a6fe4b",
    "metadata": {},
    "outputs": [],
@@ -372,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "fa209620-3338-410c-967f-fd82432c436d",
    "metadata": {},
    "outputs": [
@@ -403,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "2a5e9192-437c-43d1-98fd-6f0cfd46a764",
    "metadata": {},
    "outputs": [],
@@ -423,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "094a9a6c-d330-4d16-a1ff-86375616d0ae",
    "metadata": {},
    "outputs": [
@@ -450,8 +516,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "eb6cc166-5711-42cc-b90d-288acc6794ca",
+   "execution_count": 31,
+   "id": "30c899b6-6a5d-4a0b-9a66-6fb39d3cbb34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,26 +525,26 @@
     "    private radius: number;\n",
     "\n",
     "    constructor(radius: number) {\n",
-    "        this.radius = radius;\n",
+    "        this.radius = radius\n",
     "    }\n",
     "\n",
     "    calculate(): void {\n",
-    "        console.log(3.14 * this.radius);\n",
+    "        console.log(this.radius * this.radius * 3.14)\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "516f13ff-0b59-43d6-8e12-b1f3153b9db8",
+   "execution_count": 32,
+   "id": "dc694c9e-5861-4f9f-a37d-4c58f8685f73",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.28\n"
+      "12.56\n"
      ]
     }
    ],
