remove fly from penguin

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "70bb3a44-266d-49f9-ac53-422bc1c3c1db",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "70b2ebe1-e8ea-45d4-a23c-cf2723af9510",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "89d1b5f2-d597-4039-ac92-91c6e1dc382b",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "2d6d7fa6-eb85-412e-a598-f9bcbed0f03c",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "a3ff3900-3090-4714-86a6-7aaca7e900d6",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "9b94e290-3f94-430a-9f40-d070e41ec5a6",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "6b4bf8ea-0079-4e6e-8b3a-c498ff6330d6",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "accee7a5-fdcf-46f6-896b-e6fbe89737ed",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "d0ee1403-2205-445f-9e84-44d074b89d62",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "181fd4ca-62b5-499c-90c3-9866afc45a06",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "830d50dd-7390-42ef-a698-f2116a0857a4",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "bc54a54c-01a5-423f-86b8-3c7feb57a60e",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "57db81a2-9013-4c10-8f67-960f65a6fe4b",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "id": "fa209620-3338-410c-967f-fd82432c436d",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "2a5e9192-437c-43d1-98fd-6f0cfd46a764",
    "metadata": {},
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "id": "094a9a6c-d330-4d16-a1ff-86375616d0ae",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "30c899b6-6a5d-4a0b-9a66-6fb39d3cbb34",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "dc694c9e-5861-4f9f-a37d-4c58f8685f73",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "43ac56f3-0e6c-4073-ba14-3a89abac1dec",
    "metadata": {},
    "outputs": [],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "id": "44cfefe9-af4b-4cea-aaf0-7f8d4faa67cc",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "id": "47b6ffe8-f119-4e7f-957e-01e848ced7af",
    "metadata": {},
    "outputs": [],
@@ -685,16 +685,12 @@
     "    }\n",
     "}\n",
     "\n",
-    "class Penguin implements Bird {\n",
-    "    fly(): void {\n",
-    "        throw new Error(\"Penguin can't fly\")\n",
-    "    }\n",
-    "}"
+    "class Penguin implements Bird { }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 55,
    "id": "a7fd9ff1-6b14-472f-895f-a4a5e31e75b2",
    "metadata": {},
    "outputs": [
@@ -721,37 +717,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 56,
    "id": "306e2867-ccc4-484a-8230-bc626d0ac208",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sparrow flies\n",
-      "Sparrow flies\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "evalmachine.<anonymous>:11\n",
-      "        throw new Error(\"Penguin can't fly\");\n",
-      "        ^\n",
-      "\n",
-      "Error: Penguin can't fly\n",
-      "    at Penguin.fly (evalmachine.<anonymous>:11:15)\n",
-      "    at evalmachine.<anonymous>:16:28\n",
-      "    at Array.forEach (<anonymous>)\n",
-      "    at evalmachine.<anonymous>:16:7\n",
-      "    at evalmachine.<anonymous>:18:3\n",
-      "    at sigintHandlersWrap (node:vm:259:12)\n",
-      "    at Script.runInThisContext (node:vm:120:14)\n",
-      "    at Object.runInThisContext (node:vm:296:38)\n",
-      "    at Object.execute (/opt/conda/lib/node_modules/tslab/dist/executor.js:160:38)\n",
-      "    at JupyterHandlerImpl.handleExecuteImpl (/opt/conda/lib/node_modules/tslab/dist/jupyter.js:223:38)\n"
+      "7:51 - Property 'fly' is missing in type 'Penguin' but required in type 'FlyingBird'.\n"
      ]
     }
    ],
@@ -770,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "id": "157c4ad9-8232-4af1-8476-dd80a82113c0",
    "metadata": {},
    "outputs": [
@@ -805,9 +779,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0ad290b0-8af1-4223-8e97-fe6585140726",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03bb9057-999b-415b-b10b-9698228c1256",
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
