add isp and dip to the document

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -779,9 +779,383 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0c877b6-15b7-4c93-b374-bb501377f7f7",
+   "metadata": {},
+   "source": [
+    "## Interface Segregation Principle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71e884c8-379d-495f-bd80-9526cefb2c28",
+   "metadata": {},
+   "source": [
+    "A class should not be forced to implement interfaces it does not use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "117b7ea4-ff10-495f-8a0b-227359bc7090",
+   "metadata": {},
+   "source": [
+    "#### <span style=\"color:red\">Without ISP</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "291f5bb8-2715-4f95-a4fc-df4744ae53dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface IUserService {\n",
+    "    saveUser(): void;\n",
+    "    getLatestUsers(): User[];\n",
+    "    getLastUser(): User;\n",
+    "    getTodaysUsers(): User[];\n",
+    "}\n",
+    "\n",
+    "class UserManagerService implements IUserService {\n",
+    "    saveUser(): void { }\n",
+    "    getLatestUsers(): User[] { throw new Error(\"Method not implemented\"); }\n",
+    "    getLastUser(): User { throw new Error(\"Method not implemented\"); }\n",
+    "    getTodaysUsers(): User[] { throw new Error(\"Method not implemented\"); }\n",
+    "}\n",
+    "\n",
+    "class UserReportService implements IUserService {\n",
+    "    saveUser(): void { throw new Error(\"Method not implemented\"); }\n",
+    "    getLatestUsers(): User[] { return null; }\n",
+    "    getLastUser(): User { return null; }\n",
+    "    getTodaysUsers(): User[] { return null; }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b64be801-4ace-423f-b43d-e396e6a0dba7",
+   "metadata": {},
+   "source": [
+    "#### <span style=\"color:green\">With ISP</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "902d5730-dc9a-451e-9972-35f39ca55c1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface IUserManagerService {\n",
+    "    saveUser(): void;\n",
+    "}\n",
+    "\n",
+    "interface IUserReportService {\n",
+    "    getLatestUsers(): User[];\n",
+    "    getLastUser(): User;\n",
+    "    getTodaysUsers(): User[];\n",
+    "}\n",
+    "\n",
+    "class UserManagerService implements IUserManagerService {\n",
+    "    saveUser(): void { }\n",
+    "}\n",
+    "\n",
+    "class UserReportService implements IUserReportService {\n",
+    "    getLatestUsers(): User[] { return null; }\n",
+    "    getLastUser(): User { return null; }\n",
+    "    getTodaysUsers(): User[] { return null; }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11ed1041-e414-4928-bf03-f70bc273160e",
+   "metadata": {},
+   "source": [
+    "## Dependency Inversion Principle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75808ebd-279c-4836-a22a-6f1bf666db51",
+   "metadata": {},
+   "source": [
+    "High-level modules should not depend on low-level modules. Both should depend on abstractions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1123841-83b8-4bb9-854c-24aea1db42b0",
+   "metadata": {},
+   "source": [
+    "Abstractions should not depend on details; details should depend on abstractions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dac1597-5223-48fb-80d1-6ec5cfd31935",
+   "metadata": {},
+   "source": [
+    "#### <span style=\"color:red\">Without DIP</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "02ed5404-6b81-4413-829e-00acd58b8543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EmailService {\n",
+    "    send(message: string): void {\n",
+    "        console.log(`Email sent, ${message}`);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class UserService {\n",
+    "    private emailService: EmailService;\n",
+    "\n",
+    "    constructor() {\n",
+    "        this.emailService = new EmailService();\n",
+    "    }\n",
+    "    \n",
+    "    save(user: User): void {\n",
+    "        console.log(`User created, name: ${user.name}`);\n",
+    "        this.emailService.send(`Congradulations ${user.name}`);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "0c5208f4-71c5-4b98-b711-f664dacd8c77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User created, name: Aref\n",
+      "Email sent, Congradulations Aref\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Initialize\n",
+    "const userService = new UserService();\n",
+    "\n",
+    "// Run\n",
+    "const user: User = { name: 'Aref' };\n",
+    "userService.save(user);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3339ba14-283c-43c4-8946-d0a8e89f69f1",
+   "metadata": {},
+   "source": [
+    "Given we want to change from email to notification, what would be the solution?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "74ac7fa8-89f6-4a47-bb0b-3b16721019b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NotificationService {\n",
+    "    send(message: string): void {\n",
+    "        console.log(`Notification sent, ${message}`);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class UserService {\n",
+    "    private notificationService: NotificationService;\n",
+    "\n",
+    "    constructor() {\n",
+    "        this.notificationService = new NotificationService();\n",
+    "    }\n",
+    "    \n",
+    "    save(user: User): void {\n",
+    "        console.log(`User created, name: ${user.name}`);\n",
+    "        this.notificationService.send(`Congradulations ${user.name}`);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f93566b8-9723-4384-bc5c-9dfa17f3ccef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User created, name: Aref\n",
+      "Notification sent, Congradulations Aref\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Initialize\n",
+    "const userService = new UserService();\n",
+    "\n",
+    "// Run\n",
+    "const user: User = { name: 'Aref' };\n",
+    "userService.save(user);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c67a444-ce11-477f-9f15-730a709eac8d",
+   "metadata": {},
+   "source": [
+    "#### <span style=\"color:green\">With DIP</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "bc583e6d-9a7d-41a2-9103-f8140886b579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface INotify {\n",
+    "    send(message: string): void;\n",
+    "}\n",
+    "\n",
+    "class EmailService implements INotify {\n",
+    "    send(message: string): void {\n",
+    "        console.log(`Email sent, ${message}`);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class UserService {\n",
+    "    private notificationService: INotify;\n",
+    "\n",
+    "    constructor(notificationService: INotify) {\n",
+    "        this.notificationService = notificationService;\n",
+    "    }\n",
+    "    \n",
+    "    save(user: User): void {\n",
+    "        console.log(`User created, name: ${user.name}`);\n",
+    "        this.notificationService.send(`Congradulations ${user.name}`);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "3d03a9b1-41e1-46ea-86bb-edf7d69c8f5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User created, name: Aref\n",
+      "Email sent, Congradulations Aref\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Initialize\n",
+    "const emailService = new EmailService;\n",
+    "const userService = new UserService(emailService);\n",
+    "\n",
+    "// Run\n",
+    "const user: User = { name: 'Aref' };\n",
+    "userService.save(user);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cf3a7fb-fbb9-4ff8-a5ff-ef3db97bde85",
+   "metadata": {},
+   "source": [
+    "Given we want to change from email to notification, what would be the solution?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c4c9ce12-e6cd-4d70-abfc-2e916581f303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NotificationService implements INotify {\n",
+    "    send(message: string): void {\n",
+    "        console.log(`Notification sent, ${message}`);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "ef6257c5-676e-489b-922a-f684c6680add",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User created, name: Aref\n",
+      "Notification sent, Congradulations Aref\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Initialize\n",
+    "const notificationService = new NotificationService;\n",
+    "const userService = new UserService(notificationService);\n",
+    "\n",
+    "// Run\n",
+    "const user: User = { name: 'Aref' };\n",
+    "userService.save(user);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "9e4ae4d4-771c-4cdb-bf26-6027ba31464c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User created, name: Aref\n",
+      "Notification sent, Congradulations Aref\n",
+      "User created, name: Aref\n",
+      "Email sent, Congradulations Aref\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Initialize\n",
+    "const notificationService = new NotificationService;\n",
+    "const emailService = new EmailService();\n",
+    "\n",
+    "const userWithNotificationService = new UserService(notificationService);\n",
+    "const userWithEmailService = new UserService(emailService);\n",
+    "\n",
+    "// Run\n",
+    "const user: User = { name: 'Aref' };\n",
+    "\n",
+    "userWithNotificationService.save(user);\n",
+    "userWithEmailService.save(user);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03bb9057-999b-415b-b10b-9698228c1256",
+   "id": "5d5f5e2c-06d9-478b-ba5b-22ffcfbd39ce",
    "metadata": {},
    "outputs": [],
    "source": []
